# project_dashboard

./: .gitignore  README.md  app.py  crawler_alerts_data.py  dashboard_data.py  pyproject.toml  realtime_support.py
.streamlit/: config.toml  secrets.toml.example
dashboard/: __init__.py  config.py  content.py
data/: 기상청_지진통보.csv  기상청특보통보문.csv  수용시설.csv  통합대피소.csv  행정안전부_긴급재난문자.csv  행정안전부_지진발생이력.csv  행정안전부_지진옥외대피장소.csv  행정안전부_지진해일 긴급대피장소.csv  행정안전부_침수흔적도.csv  환경방사선량률.csv
docs/: 01_FLAT_STRUCTURE.md  01_PROJECT_DIRECTION.md  01_프로젝트_구조.md  02_PAGE_FLOW.md  02_STRUCTURE_GUIDE.md  02_데이터_흐름.md  03_STREAMLIT_LEARNING_GUIDE.md  03_TEST_GUIDE.md  03_테스트_가이드.md  04_INTERNAL_FUNCTION_CLEANUP.md  04_UPDATE_AND_EXPANSION_GUIDE.md  05_LIBRARY_GUIDE.md  06_PROJECT_EXPLANATION_GUIDE.md  07_WORKING_CHECKLIST.md  08_CODEBASE_OVERVIEW.md  09_ENTRYPOINT_AND_CONFIG_GUIDE.md  10_CONTENT_AND_DATA_GUIDE.md  11_COMPONENT_AND_PAGE_GUIDE.md  12_TEST_AND_VERIFICATION_GUIDE.md  13_EXPORT_GUIDE.md  14_CODING_AND_CLASS_GUIDELINES.md  15_DATA_SOURCE_EXPANSION_GUIDE.md  16_PAGE_AND_FEATURE_EXPANSION_GUIDE.md  17_CONNECTION_MAP_GUIDE.md
pages/: 1_About.py  1_대피_안내_시뮬레이션.py  1_대피소_추천.py  2_Projects.py  2_대피소_추천.py  2_실시간_대피_안내.py  2_실시간_테스트.py  3_Data_Analysis.py  3_데이터_분석.py  3_작동_설명.py  3_재난문자_대피_안내.py  4_Data_Analysis.py  4_Learning_Log.py  4_권역_대피소_지도.py  4_실시간_준비.py  4_재난문자_대피_안내.py  5_Projects.py  5_부울경_대피소_맵.py  6_Data_Analysis.py  7_Learning_Log.py
preprocessing_code/: analyze.ipynb  crawling.py  mock_disaster_message.py  simul.ipynb
tests/: conftest.py  test_analysis_data.py  (+15 more)
(+30 files in other folders)
